--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~11.2.14",
     "@nebular/eva-icons": "7.0.2",
     "@nebular/theme": "^7.0.2",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.3",
     "eva-icons": "^1.1.2",
+    "ng2-charts": "^2.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
